--- a/doc/smart_ptr/intrusive_ref_counter.adoc
+++ b/doc/smart_ptr/intrusive_ref_counter.adoc
@@ -78,12 +78,11 @@ namespace boost {
 ```
 intrusive_ref_counter() noexcept;
 ```
-::
 ```
 intrusive_ref_counter(const intrusive_ref_counter&) noexcept;
 ```
-::
-Postconditions::: `use_count() == 0`.
+[horizontal]
+Postconditions:: `use_count() == 0`.
 
 NOTE: The pointer to the constructed object is expected to be passed to
 `intrusive_ptr` constructor, assignment operator or `reset` method, which
@@ -94,8 +93,8 @@ would increment the reference counter.
 ```
 ~intrusive_ref_counter();
 ```
-::
-Effects::: Destroys the counter object.
+[horizontal]
+Effects:: Destroys the counter object.
 
 NOTE: The destructor is protected so that the object can only be destroyed
 through the `Derived` class.
@@ -105,16 +104,16 @@ through the `Derived` class.
 ```
 intrusive_ref_counter& operator=(const intrusive_ref_counter& v) noexcept;
 ```
-::
-Effects::: Does nothing, reference counter is not modified.
+[horizontal]
+Effects:: Does nothing, reference counter is not modified.
 
 ### use_count
 
 ```
 unsigned int use_count() const noexcept;
 ```
-::
-Returns::: The current value of the reference counter.
+[horizontal]
+Returns:: The current value of the reference counter.
 
 NOTE: The returned value may not be actual in multi-threaded applications.
 
@@ -127,8 +126,8 @@ template<class Derived, class CounterPolicy>
   void intrusive_ptr_add_ref(
     const intrusive_ref_counter<Derived, CounterPolicy>* p) noexcept;
 ```
-::
-Effects::: Increments the reference counter.
+[horizontal]
+Effects:: Increments the reference counter.
 
 ### intrusive_ptr_release
 
@@ -137,6 +136,6 @@ template<class Derived, class CounterPolicy>
   void intrusive_ptr_release(
     const intrusive_ref_counter<Derived, CounterPolicy>* p) noexcept;
 ```
-::
-Effects::: Decrements the reference counter. If the reference counter reaches
+[horizontal]
+Effects:: Decrements the reference counter. If the reference counter reaches
 0, calls `delete static_cast<const Derived*>(p)`.
