--- a/doc/smart_ptr/weak_ptr.adoc
+++ b/doc/smart_ptr/weak_ptr.adoc
@@ -127,9 +127,7 @@ typedef ... element_type;
 ```
 weak_ptr() noexcept;
 ```
-[none]
-* {blank}
-+
+[horizontal]
 Effects:: Constructs an empty `weak_ptr`.
 Postconditions:: `use_count() == 0`.
 
@@ -142,18 +140,14 @@ weak_ptr(weak_ptr const & r) noexcept;
 ```
 template<class Y> weak_ptr(weak_ptr<Y> const & r) noexcept;
 ```
-[none]
-* {blank}
-+
+[horizontal]
 Effects:: If `r` is empty, constructs an empty `weak_ptr`; otherwise, constructs a `weak_ptr` that shares ownership with `r` as if by storing a copy of the pointer stored in `r`.
 Postconditions:: `use_count() == r.use_count()`.
 
 ```
 weak_ptr(weak_ptr && r) noexcept;
 ```
-[none]
-* {blank}
-+
+[horizontal]
 Effects:: Constructs a `weak_ptr` that has the value `r` held.
 Postconditions:: `r` is empty.
 
@@ -161,9 +155,7 @@ Postconditions:: `r` is empty.
 ```
 ~weak_ptr() noexcept;
 ```
-[none]
-* {blank}
-+
+[horizontal]
 Effects:: Destroys this `weak_ptr` but has no effect on the object its stored pointer points to.
 
 ### assignment
@@ -179,9 +171,7 @@ template<class Y> weak_ptr & operator=(weak_ptr<Y> const & r) noexcept;
 ```
 template<class Y> weak_ptr & operator=(shared_ptr<Y> const & r) noexcept;
 ```
-[none]
-* {blank}
-+
+[horizontal]
 Effects:: Equivalent to `weak_ptr(r).swap(*this)`.
 
 NOTE: The implementation is free to meet the effects (and the implied guarantees) via different means, without creating a temporary.
@@ -190,45 +180,35 @@ NOTE: The implementation is free to meet the effects (and the implied guarantees
 ```
 long use_count() const noexcept;
 ```
-[none]
-* {blank}
-+
+[horizontal]
 Returns:: 0 if `*this` is empty; otherwise, the number of `shared_ptr` objects that share ownership with `*this`.
 
 ### expired
 ```
 bool expired() const noexcept;
 ```
-[none]
-* {blank}
-+
+[horizontal]
 Returns:: `use_count() == 0`.
 
 ### lock
 ```
 shared_ptr<T> lock() const noexcept;
 ```
-[none]
-* {blank}
-+
+[horizontal]
 Returns:: `expired()? shared_ptr<T>(): shared_ptr<T>(*this)`.
 
 ### reset
 ```
 void reset() noexcept;
 ```
-[none]
-* {blank}
-+
+[horizontal]
 Effects:: Equivalent to `weak_ptr().swap(*this)`.
 
 ### swap
 ```
 void swap(weak_ptr & b) noexcept;
 ```
-[none]
-* {blank}
-+
+[horizontal]
 Effects:: Exchanges the contents of the two smart pointers.
 
 ```
@@ -237,9 +217,7 @@ template<class Y> bool owner_before( weak_ptr<Y> const & r ) const noexcept;
 ```
 template<class Y> bool owner_before( shared_ptr<Y> const & r ) const noexcept;
 ```
-[none]
-* {blank}
-+
+[horizontal]
 Returns:: See the description of `operator<`.
 
 ## Free Functions
@@ -249,9 +227,7 @@ Returns:: See the description of `operator<`.
 template<class T, class U>
   bool operator<(weak_ptr<T> const & a, weak_ptr<U> const & b) noexcept;
 ```
-[none]
-* {blank}
-+
+[horizontal]
 Returns:: An unspecified value such that
 - `operator<` is a strict weak ordering as described in section [lib.alg.sorting] of the {cpp} standard; 
 - under the equivalence relation defined by `operator<`, `!(a < b) && !(b < a)`, two `weak_ptr` instances
@@ -263,9 +239,7 @@ NOTE: Allows `weak_ptr` objects to be used as keys in associative containers.
 ```
 template<class T> void swap(weak_ptr<T> & a, weak_ptr<T> & b) noexcept;
 ```
-[none]
-* {blank}
-+
+[horizontal]
 Effects:: Equivalent to `a.swap(b)`.
 
 ## Frequently Asked Questions
