--- a/doc/smart_ptr/intrusive_ptr.adoc
+++ b/doc/smart_ptr/intrusive_ptr.adoc
@@ -136,14 +136,18 @@ Provides the type of the template parameter T.
 intrusive_ptr() noexcept;
 ```
 
-[horizontal]
+[none]
+* {blank}
++
 Postconditions:: `get() == 0`.
 
 ```
 intrusive_ptr(T * p, bool add_ref = true);
 ```
 
-[horizontal]
+[none]
+* {blank}
++
 Effects:: `if(p != 0 && add_ref) intrusive_ptr_add_ref(p);`.
 Postconditions:: `get() == p`.
 
@@ -154,7 +158,9 @@ intrusive_ptr(intrusive_ptr const & r);
 template<class Y> intrusive_ptr(intrusive_ptr<Y> const & r);
 ```
 
-[horizontal]
+[none]
+* {blank}
++
 Effects:: `T * p = r.get(); if(p != 0) intrusive_ptr_add_ref(p);`.
 Postconditions:: `get() == r.get()`.
 
@@ -165,7 +171,9 @@ intrusive_ptr(intrusive_ptr && r);
 template<class Y> intrusive_ptr(intrusive_ptr<Y> && r);
 ```
 
-[horizontal]
+[none]
+* {blank}
++
 Postconditions:: `get()` equals the old value of `r.get()`. `r.get() == 0`.
 
 ### destructor
@@ -174,7 +182,9 @@ Postconditions:: `get()` equals the old value of `r.get()`. `r.get() == 0`.
 ~intrusive_ptr();
 ```
 
-[horizontal]
+[none]
+* {blank}
++
 Effects:: `if(get() != 0) intrusive_ptr_release(get());`.
 
 ### assignment
@@ -189,7 +199,9 @@ template<class Y> intrusive_ptr & operator=(intrusive_ptr<Y> const & r);
 intrusive_ptr & operator=(T * r);
 ```
 
-[horizontal]
+[none]
+* {blank}
++
 Effects:: Equivalent to `intrusive_ptr(r).swap(*this)`.
 Returns:: `*this`.
 
@@ -200,7 +212,9 @@ intrusive_ptr & operator=(intrusive_ptr && r);
 template<class Y> intrusive_ptr & operator=(intrusive_ptr<Y> && r);
 ```
 
-[horizontal]
+[none]
+* {blank}
++
 Effects:: Equivalent to `intrusive_ptr(std::move(r)).swap(*this)`.
 Returns:: `*this`.
 
@@ -210,21 +224,27 @@ Returns:: `*this`.
 void reset();
 ```
 
-[horizontal]
+[none]
+* {blank}
++
 Effects:: Equivalent to `intrusive_ptr().swap(*this)`.
 
 ```
 void reset(T * r);
 ```
 
-[horizontal]
+[none]
+* {blank}
++
 Effects:: Equivalent to `intrusive_ptr(r).swap(*this)`.
 
 ```
 void reset(T * r, bool add_ref);
 ```
 
-[horizontal]
+[none]
+* {blank}
++
 Effects:: Equivalent to `intrusive_ptr(r, add_ref).swap(*this)`.
 
 ### indirection
@@ -233,7 +253,9 @@ Effects:: Equivalent to `intrusive_ptr(r, add_ref).swap(*this)`.
 T & operator*() const noexcept;
 ```
 
-[horizontal]
+[none]
+* {blank}
++
 Requirements:: `get() != 0`.
 Returns:: `*get()`.
 
@@ -241,7 +263,9 @@ Returns:: `*get()`.
 T * operator->() const noexcept;
 ```
 
-[horizontal]
+[none]
+* {blank}
++
 Requirements:: `get() != 0`.
 Returns:: `get()`.
 
@@ -251,7 +275,9 @@ Returns:: `get()`.
 T * get() const noexcept;
 ```
 
-[horizontal]
+[none]
+* {blank}
++
 Returns:: the stored pointer.
 
 ### detach
@@ -260,7 +286,9 @@ Returns:: the stored pointer.
 T * detach() noexcept;
 ```
 
-[horizontal]
+[none]
+* {blank}
++
 Returns:: the stored pointer.
 Postconditions:: `get() == 0`.
 
@@ -278,7 +306,9 @@ the implications are thoroughly understood.
 explicit operator bool () const noexcept;
 ```
 
-[horizontal]
+[none]
+* {blank}
++
 Returns:: `get() != 0`.
 
 NOTE: This conversion operator allows `intrusive_ptr` objects to be used in boolean contexts,
@@ -292,7 +322,9 @@ NOTE: On C++03 compilers, the return value is of an unspecified type.
 void swap(intrusive_ptr & b) noexcept;
 ```
 
-[horizontal]
+[none]
+* {blank}
++
 Effects:: Exchanges the contents of the two smart pointers.
 
 ## Free Functions
@@ -304,7 +336,9 @@ template<class T, class U>
   bool operator==(intrusive_ptr<T> const & a, intrusive_ptr<U> const & b) noexcept;
 ```
 
-[horizontal]
+[none]
+* {blank}
++
 Returns:: `a.get() == b.get()`.
 
 ```
@@ -312,7 +346,9 @@ template<class T, class U>
   bool operator!=(intrusive_ptr<T> const & a, intrusive_ptr<U> const & b) noexcept;
 ```
 
-[horizontal]
+[none]
+* {blank}
++
 Returns:: `a.get() != b.get()`.
 
 ```
@@ -320,7 +356,9 @@ template<class T, class U>
   bool operator==(intrusive_ptr<T> const & a, U * b) noexcept;
 ```
 
-[horizontal]
+[none]
+* {blank}
++
 Returns:: `a.get() == b`.
 
 ```
@@ -328,7 +366,9 @@ template<class T, class U>
   bool operator!=(intrusive_ptr<T> const & a, U * b) noexcept;
 ```
 
-[horizontal]
+[none]
+* {blank}
++
 Returns:: `a.get() != b`.
 
 ```
@@ -336,7 +376,9 @@ template<class T, class U>
   bool operator==(T * a, intrusive_ptr<U> const & b) noexcept;
 ```
 
-[horizontal]
+[none]
+* {blank}
++
 Returns:: `a == b.get()`.
 
 ```
@@ -344,7 +386,9 @@ template<class T, class U>
   bool operator!=(T * a, intrusive_ptr<U> const & b) noexcept;
 ```
 
-[horizontal]
+[none]
+* {blank}
++
 Returns:: `a != b.get()`.
 
 ```
@@ -352,7 +396,9 @@ template<class T>
   bool operator<(intrusive_ptr<T> const & a, intrusive_ptr<T> const & b) noexcept;
 ```
 
-[horizontal]
+[none]
+* {blank}
++
 Returns:: `std::less<T *>()(a.get(), b.get())`.
 
 NOTE: Allows `intrusive_ptr` objects to be used as keys in associative containers.
@@ -363,7 +409,9 @@ NOTE: Allows `intrusive_ptr` objects to be used as keys in associative container
 template<class T> void swap(intrusive_ptr<T> & a, intrusive_ptr<T> & b) noexcept;
 ```
 
-[horizontal]
+[none]
+* {blank}
++
 Effects:: Equivalent to `a.swap(b)`.
 
 ### get_pointer
@@ -372,7 +420,9 @@ Effects:: Equivalent to `a.swap(b)`.
 template<class T> T * get_pointer(intrusive_ptr<T> const & p) noexcept;
 ```
 
-[horizontal]
+[none]
+* {blank}
++
 Returns:: `p.get()`.
 
 NOTE: Provided as an aid to generic programming. Used by `mem_fn`.
@@ -384,7 +434,9 @@ template<class T, class U>
   intrusive_ptr<T> static_pointer_cast(intrusive_ptr<U> const & r) noexcept;
 ```
 
-[horizontal]
+[none]
+* {blank}
++
 Returns:: `intrusive_ptr<T>(static_cast<T*>(r.get()))`.
 
 ### const_pointer_cast
@@ -394,7 +446,9 @@ template<class T, class U>
   intrusive_ptr<T> const_pointer_cast(intrusive_ptr<U> const & r) noexcept;
 ```
 
-[horizontal]
+[none]
+* {blank}
++
 Returns:: `intrusive_ptr<T>(const_cast<T*>(r.get()))`.
 
 ### dynamic_pointer_cast
@@ -404,7 +458,9 @@ template<class T, class U>
   intrusive_ptr<T> dynamic_pointer_cast(intrusive_ptr<U> const & r) noexcept;
 ```
 
-[horizontal]
+[none]
+* {blank}
++
 Returns:: `intrusive_ptr<T>(dynamic_cast<T*>(r.get()))`.
 
 ### operator<<
@@ -415,6 +471,8 @@ template<class E, class T, class Y>
     intrusive_ptr<Y> const & p);
 ```
 
-[horizontal]
+[none]
+* {blank}
++
 Effects:: `os << p.get();`.
 Returns:: `os`.
