--- a/doc/smart_ptr/intrusive_ref_counter.adoc
+++ b/doc/smart_ptr/intrusive_ref_counter.adoc
@@ -81,7 +81,9 @@ intrusive_ref_counter() noexcept;
 ```
 intrusive_ref_counter(const intrusive_ref_counter&) noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Postconditions:: `use_count() == 0`.
 
 NOTE: The pointer to the constructed object is expected to be passed to
@@ -93,7 +95,9 @@ would increment the reference counter.
 ```
 ~intrusive_ref_counter();
 ```
-[horizontal]
+[none]
+* {blank}
++
 Effects:: Destroys the counter object.
 
 NOTE: The destructor is protected so that the object can only be destroyed
@@ -104,7 +108,9 @@ through the `Derived` class.
 ```
 intrusive_ref_counter& operator=(const intrusive_ref_counter& v) noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Effects:: Does nothing, reference counter is not modified.
 
 ### use_count
@@ -112,7 +118,9 @@ Effects:: Does nothing, reference counter is not modified.
 ```
 unsigned int use_count() const noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Returns:: The current value of the reference counter.
 
 NOTE: The returned value may not be actual in multi-threaded applications.
@@ -126,7 +134,9 @@ template<class Derived, class CounterPolicy>
   void intrusive_ptr_add_ref(
     const intrusive_ref_counter<Derived, CounterPolicy>* p) noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Effects:: Increments the reference counter.
 
 ### intrusive_ptr_release
@@ -136,6 +146,8 @@ template<class Derived, class CounterPolicy>
   void intrusive_ptr_release(
     const intrusive_ref_counter<Derived, CounterPolicy>* p) noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Effects:: Decrements the reference counter. If the reference counter reaches
 0, calls `delete static_cast<const Derived*>(p)`.
