--- a/doc/smart_ptr/shared_ptr.adoc
+++ b/doc/smart_ptr/shared_ptr.adoc
@@ -263,7 +263,9 @@ constexpr shared_ptr() noexcept;
 ```
 constexpr shared_ptr(std::nullptr_t) noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Effects:: Constructs an empty `shared_ptr`.
 Postconditions:: `use_count() == 0 && get() == 0`.
 
@@ -271,7 +273,9 @@ Postconditions:: `use_count() == 0 && get() == 0`.
 ```
 template<class Y> explicit shared_ptr(Y * p);
 ```
-[horizontal]
+[none]
+* {blank}
++
 Requires:: `Y` must be a complete type. The expression `delete[] p`, when `T` is an array type, or `delete p`, when `T` is not an array type,
   must be well-formed, well-defined, and not throw exceptions. When `T` is `U[N]`, `Y(\*)[N]` must be convertible to `T*`; when `T` is `U[]`, `Y(\*)[]`
   must be convertible to `T*`; otherwise, `Y\*` must be convertible to `T*`.
@@ -305,7 +309,9 @@ template<class D> shared_ptr(std::nullptr_t p, D d);
 ```
 template<class D, class A> shared_ptr(std::nullptr_t p, D d, A a);
 ```
-[horizontal]
+[none]
+* {blank}
++
 Requires:: `D` must be `CopyConstructible`. The copy constructor and destructor of `D` must not throw. The expression `d(p)` must be well-formed, well-defined,
   and not throw exceptions. `A` must be an `Allocator`, as described in section Allocator Requirements [allocator.requirements] of the {cpp} Standard.
   When `T` is `U[N]`, `Y(\*)[N]` must be convertible to `T*`; when `T` is `U[]`, `Y(\*)[]` must be convertible to `T*`; otherwise, `Y\*` must be convertible to `T*`.
@@ -335,7 +341,9 @@ shared_ptr(shared_ptr const & r) noexcept;
 ```
 template<class Y> shared_ptr(shared_ptr<Y> const & r) noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Requires:: `Y*` should be convertible to `T*`.
 
 Effects:: If `r` is empty, constructs an empty `shared_ptr`; otherwise, constructs a `shared_ptr` that shares ownership with `r`.
@@ -349,7 +357,9 @@ shared_ptr(shared_ptr && r) noexcept;
 ```
 template<class Y> shared_ptr(shared_ptr<Y> && r) noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Requires:: `Y*` should be convertible to `T*`.
 
 Effects:: Move-constructs a `shared_ptr` from `r`.
@@ -360,7 +370,9 @@ Postconditions:: `*this` contains the old value of `r`. `r` is empty and `r.get(
 ```
 template<class Y> shared_ptr(shared_ptr<Y> const & r, element_type * p) noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Effects:: constructs a `shared_ptr` that shares ownership with `r` and stores `p`.
 
 Postconditions:: `get() == p && use_count() == r.use_count()`.
@@ -369,7 +381,9 @@ Postconditions:: `get() == p && use_count() == r.use_count()`.
 ```
 template<class Y> shared_ptr(shared_ptr<Y> && r, element_type * p) noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Effects:: Move-constructs a `shared_ptr` from `r`, while storing `p` instead.
 
 Postconditions:: `get() == p` and `use_count()` equals the old count of `r`. `r` is empty and `r.get() == 0`.
@@ -378,7 +392,9 @@ Postconditions:: `get() == p` and `use_count()` equals the old count of `r`. `r`
 ```
 template<class Y> explicit shared_ptr(weak_ptr<Y> const & r);
 ```
-[horizontal]
+[none]
+* {blank}
++
 Requires:: `Y*` should be convertible to `T*`.
 
 Effects:: Constructs a `shared_ptr` that shares ownership with `r` and stores a copy of the pointer stored in `r`.
@@ -396,7 +412,9 @@ template<class Y> shared_ptr(std::auto_ptr<Y> & r);
 ```
 template<class Y> shared_ptr(std::auto_ptr<Y> && r);
 ```
-[horizontal]
+[none]
+* {blank}
++
 Requires:: `Y*` should be convertible to `T*`.
 
 Effects:: Constructs a `shared_ptr`, as if by storing a copy of `r.release()`.
@@ -411,7 +429,9 @@ Exception safety:: If an exception is thrown, the constructor has no effect.
 ```
 template<class Y, class D> shared_ptr(std::unique_ptr<Y, D> && r);
 ```
-[horizontal]
+[none]
+* {blank}
++
 Requires:: `Y*` should be convertible to `T*`.
 
 Effects::
@@ -428,7 +448,9 @@ Exception safety:: If an exception is thrown, the constructor has no effect.
 ```
 ~shared_ptr() noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Effects::
 - If `*this` is empty, or shares ownership with another `shared_ptr` instance (`use_count() > 1`), there are no side effects.
 - Otherwise, if `*this` owns a pointer `p` and a deleter `d`, `d(p)` is called.
@@ -444,7 +466,9 @@ template<class Y> shared_ptr & operator=(shared_ptr<Y> const & r) noexcept;
 ```
 template<class Y> shared_ptr & operator=(std::auto_ptr<Y> & r);
 ```
-[horizontal]
+[none]
+* {blank}
++
 Effects:: Equivalent to `shared_ptr(r).swap(*this)`.
 Returns:: `*this`.
 
@@ -475,14 +499,18 @@ template<class Y> shared_ptr & operator=(std::auto_ptr<Y> && r);
 ```
 template<class Y, class D> shared_ptr & operator=(std::unique_ptr<Y, D> && r);
 ```
-[horizontal]
+[none]
+* {blank}
++
 Effects:: Equivalent to `shared_ptr(std::move(r)).swap(*this)`.
 Returns:: `*this`.
 
 ```
 shared_ptr & operator=(std::nullptr_t) noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Effects:: Equivalent to `shared_ptr().swap(*this)`.
 Returns:: `*this`.
 
@@ -490,58 +518,76 @@ Returns:: `*this`.
 ```
 void reset() noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Effects:: Equivalent to `shared_ptr().swap(*this)`.
 
 ```
 template<class Y> void reset(Y * p);
 ```
-[horizontal]
+[none]
+* {blank}
++
 Effects:: Equivalent to `shared_ptr(p).swap(*this)`.
 
 ```
 template<class Y, class D> void reset(Y * p, D d);
 ```
-[horizontal]
+[none]
+* {blank}
++
 Effects:: Equivalent to `shared_ptr(p, d).swap(*this)`.
 
 ```
 template<class Y, class D, class A> void reset(Y * p, D d, A a);
 ```
-[horizontal]
+[none]
+* {blank}
++
 Effects:: Equivalent to `shared_ptr(p, d, a).swap(*this)`.
 
 ```
 template<class Y> void reset(shared_ptr<Y> const & r, element_type * p) noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Effects:: Equivalent to `shared_ptr(r, p).swap(*this)`.
 
 ```
 template<class Y> void reset(shared_ptr<Y> && r, element_type * p) noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Effects:: Equivalent to `shared_ptr(std::move(r), p).swap(*this)`.
 
 ### indirection
 ```
 T & operator*() const noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Requires:: `T` should not be an array type. The stored pointer must not be 0.
 Returns:: `*get()`.
 
 ```
 T * operator->() const noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Requires:: `T` should not be an array type. The stored pointer must not be 0.
 Returns:: `get()`.
 
 ```
 element_type & operator[](std::ptrdiff_t i) const noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Requires:: `T` should be an array type. The stored pointer must not be 0. `i >= 0`. If `T` is `U[N]`, `i < N`.
 Returns:: `get()[i]`.
 
@@ -550,28 +596,36 @@ Returns:: `get()[i]`.
 ```
 element_type * get() const noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Returns:: The stored pointer.
 
 ### unique
 ```
 bool unique() const noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Returns:: `use_count() == 1`.
 
 ### use_count
 ```
 long use_count() const noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Returns:: The number of `shared_ptr` objects, `*this` included, that share ownership with `*this`, or 0 when `*this` is empty.
 
 ### conversions
 ```
 explicit operator bool() const noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Returns:: `get() != 0`.
 
 NOTE: This conversion operator allows `shared_ptr` objects to be used in boolean contexts, like `if(p && p\->valid()) {}`.
@@ -585,7 +639,9 @@ NOTE: On C++03 compilers, the return value is of an unspecified type.
 ```
 void swap(shared_ptr & b) noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Effects:: Exchanges the contents of the two smart pointers.
 
 ### owner_before
@@ -595,7 +651,9 @@ template<class Y> bool owner_before(shared_ptr<Y> const & rhs) const noexcept;
 ```
 template<class Y> bool owner_before(weak_ptr<Y> const & rhs) const noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Effects:: See the description of `operator<`.
 
 ## Free Functions
@@ -605,14 +663,18 @@ Effects:: See the description of `operator<`.
 template<class T, class U>
   bool operator==(shared_ptr<T> const & a, shared_ptr<U> const & b) noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Returns:: `a.get() == b.get()`.
 
 ```
 template<class T, class U>
   bool operator!=(shared_ptr<T> const & a, shared_ptr<U> const & b) noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Returns:: `a.get() != b.get()`.
 
 ```
@@ -621,7 +683,9 @@ template<class T> bool operator==(shared_ptr<T> const & p, std::nullptr_t) noexc
 ```
 template<class T> bool operator==(std::nullptr_t, shared_ptr<T> const & p) noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Returns:: `p.get() == 0`.
 
 ```
@@ -630,14 +694,18 @@ template<class T> bool operator!=(shared_ptr<T> const & p, std::nullptr_t) noexc
 ```
 template<class T> bool operator!=(std::nullptr_t, shared_ptr<T> const & p) noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Returns:: `p.get() != 0`.
 
 ```
 template<class T, class U>
   bool operator<(shared_ptr<T> const & a, shared_ptr<U> const & b) noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Returns:: An unspecified value such that
   - `operator<` is a strict weak ordering as described in section [lib.alg.sorting] of the {cpp} standard;
   - under the equivalence relation defined by `operator<`, `!(a < b) && !(b < a)`, two `shared_ptr` instances
@@ -651,7 +719,9 @@ NOTE: The rest of the comparison operators are omitted by design.
 ```
 template<class T> void swap(shared_ptr<T> & a, shared_ptr<T> & b) noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Effects:: Equivalent to `a.swap(b)`.
 
 ### get_pointer
@@ -660,7 +730,9 @@ template<class T>
   typename shared_ptr<T>::element_type *
     get_pointer(shared_ptr<T> const & p) noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Returns:: `p.get()`.
 
 NOTE: Provided as an aid to generic programming. Used by `mem_fn`.
@@ -670,7 +742,9 @@ NOTE: Provided as an aid to generic programming. Used by `mem_fn`.
 template<class T, class U>
   shared_ptr<T> static_pointer_cast(shared_ptr<U> const & r) noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Requires:: The expression `static_cast<T*>( (U*)0 )` must be well-formed.
 Returns:: `shared_ptr<T>( r, static_cast<typename shared_ptr<T>::element_type*>(r.get()) )`.
 
@@ -682,7 +756,9 @@ result in undefined behavior, attempting to delete the same object twice.
 template<class T, class U>
   shared_ptr<T> const_pointer_cast(shared_ptr<U> const & r) noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Requires:: The expression `const_cast<T*>( (U*)0 )` must be well-formed.
 Returns:: `shared_ptr<T>( r, const_cast<typename shared_ptr<T>::element_type*>(r.get()) )`.
 
@@ -691,7 +767,9 @@ Returns:: `shared_ptr<T>( r, const_cast<typename shared_ptr<T>::element_type*>(r
 template<class T, class U>
     shared_ptr<T> dynamic_pointer_cast(shared_ptr<U> const & r) noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Requires:: The expression `dynamic_cast<T*>( (U*)0 )` must be well-formed.
 Returns::
   - When `dynamic_cast<typename shared_ptr<T>::element_type*>(r.get())` returns a nonzero value `p`, `shared_ptr<T>(r, p)`;
@@ -702,7 +780,9 @@ Returns::
 template<class T, class U>
   shared_ptr<T> reinterpret_pointer_cast(shared_ptr<U> const & r) noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Requires:: The expression `reinterpret_cast<T*>( (U*)0 )` must be well-formed.
 Returns:: `shared_ptr<T>( r, reinterpret_cast<typename shared_ptr<T>::element_type*>(r.get()) )`.
 
@@ -712,7 +792,9 @@ template<class E, class T, class Y>
   std::basic_ostream<E, T> &
     operator<< (std::basic_ostream<E, T> & os, shared_ptr<Y> const & p);
 ```
-[horizontal]
+[none]
+* {blank}
++
 Effects:: `os << p.get();`.
 Returns:: `os`.
 
@@ -721,7 +803,9 @@ Returns:: `os`.
 template<class D, class T>
   D * get_deleter(shared_ptr<T> const & p) noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Returns:: If `*this` owns a deleter `d` of type (cv-unqualified) `D`, returns `&d`; otherwise returns 0.
 
 ### Atomic Access
@@ -733,7 +817,9 @@ NOTE: The function in this section are atomic with respect to the first `shared_
 ```
 template<class T> bool atomic_is_lock_free( shared_ptr<T> const * p ) noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Returns:: `false`.
 
 NOTE: This implementation is not lock-free.
@@ -744,7 +830,9 @@ template<class T> shared_ptr<T> atomic_load( shared_ptr<T> const * p ) noexcept;
 ```
 template<class T> shared_ptr<T> atomic_load_explicit( shared_ptr<T> const * p, int ) noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Returns:: `*p`.
 
 NOTE: The `int` argument is the `memory_order`, but this implementation does not use it, as it's lock-based
@@ -758,7 +846,9 @@ template<class T>
 template<class T>
   void atomic_store_explicit( shared_ptr<T> * p, shared_ptr<T> r, int ) noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Effects:: `p\->swap(r)`.
 
 ```
@@ -770,7 +860,9 @@ template<class T>
   shared_ptr<T> atomic_exchange_explicit(
     shared_ptr<T> * p, shared_ptr<T> r, int ) noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Effects:: `p\->swap(r)`.
 Returns:: The old value of `*p`.
 
@@ -784,7 +876,9 @@ template<class T>
   bool atomic_compare_exchange_explicit(
     shared_ptr<T> * p, shared_ptr<T> * v, shared_ptr<T> w, int, int ) noexcept;
 ```
-[horizontal]
+[none]
+* {blank}
++
 Effects:: If `*p` is equivalent to `*v`, assigns `w` to `*p`, otherwise assigns `*p` to `*v`.
 Returns:: `true` if `*p` was equivalent to `*v`, `false` otherwise.
 Remarks:: Two `shared_ptr` instances are equivalent if they store the same pointer value and _share ownership_.
