--- a/doc/smart_ptr/changelog.adoc
+++ b/doc/smart_ptr/changelog.adoc
@@ -17,3 +17,4 @@ http://www.boost.org/LICENSE_1_0.txt
 
 * Added aliasing constructors to `weak_ptr`
 * Added `weak_ptr<T>::empty()`
+* Added `enable_shared_from`, `shared_from`, and `weak_from`
