--- a/doc/smart_ptr/changelog.adoc
+++ b/doc/smart_ptr/changelog.adoc
@@ -13,6 +13,10 @@ http://www.boost.org/LICENSE_1_0.txt
 :toc-title:
 :idprefix: changelog_
 
+## Changes in 1.72.0
+
+* Added `allocate_unique`
+
 ## Changes in 1.71.0
 
 * Added aliasing constructors to `weak_ptr`
